portfolio page completed.. pending tiny bugs of line not showing correctly

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -334,15 +334,17 @@ section {
     font-size: 1.4rem;
     text-align: center;
     padding: 3.5rem 0;
+    position: relative;
 
     &::before {
         content: '';
+        position: absolute;
         top: 0;
         left: 50%;
-        width: 100%;
+        width: 40%;
         height: 1px;
         background-color: var(--color-gray5);
-        transform: translateX(-5);
+        transform: translateX(-50%);
     }
 }
 
@@ -402,6 +404,88 @@ section {
         
 
     }
+}
+
+
+/* Portfolio section*/
+.portfolio-text {
+    padding: 2rem;
+    text-align: center;
+}
+
+.portfolios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+
+    .portfolio-item {
+        position: relative;
+        img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 15px 
+        }
+        .hover-items {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background-color:  var(--color-secondary);
+            left: 0;
+            top: 0;
+            border-radius: 15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            transform: scale(0);
+            transition: all .4s ease-in-out;
+
+            h3 {
+                font-size: 1.5rem;
+                color: var(--color-white);
+                margin-bottom: 1.5rem;
+            }
+            .icons {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .icon {
+                    background-color: var(--color-primary);
+                    border-radius: 50%;
+                    width: 50px;
+                    height: 50px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 1rem;
+                    cursor: pointer;
+                    transition: all .4s ease-in-out;
+
+                    i {
+                        font-size: 1.5rem;
+                        color: var(--color-white);
+                        margin: 0 1rem;
+                    }
+                    &:hover {
+                        background-color: var(--color-white);
+                        i {
+                            color: var(--color-primary);
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+.portfolio-item:hover .hover-items {
+    opacity: 1;
+    transform: scale(1);
 }
 /* independent components */
 .btn-cnt {
